# sandbox

./: .gitignore  DrawFunc.py  FM変調指数修正.html  README.md  cite.bib  combine_json.py  docker-compose.yml  index.html  main.aux  main.bbl  main.bcf  main.blg  main.py  main.run.xml  main.tex  pyproject.toml  requirements.txt  trash.py  捨て２.html
.devcontainer/: devcontainer.json
app/: .gitignore  GaussFunc.py  main.py  requirements.txt
app/backend/: main.py  parameters.json
app/backend/analyzation/: fitness.csv
app/backend/app/: main.py
app/backend/core/: log.py
app/backend/engine/: evaluate.py  run_iga_simulation.py
app/backend/routers/: evaluation.py
app/frontend/src/: App.tsx  api.ts
app/result/: simulation_Ackley.json  simulation_Ackley_9gens_200.json  simulation_Rastrigin.json  simulation_Rastrigin_9gens_200.json  simulation_Schwefel.json  simulation_Schwefel_9gens_200.json  simulation_cos.json  simulation_gaussian.json  simulation_gaussian_9gens_200.json  simulation_noise.json  simulation_noise_9gens_200.json  simulation_random.json  simulation_random_results.json  simulation_sphere.json  simulation_sphere_9gens_200.json  simulation_test.json
app/result/best/: best_individual_Ackley.json  best_individual_Ackley_20gens_10.json  best_individual_Ackley_9gens_200.json  best_individual_Rastrigin.json  best_individual_Rastrigin_20gens_10.json  best_individual_Rastrigin_9gens_200.json  best_individual_Schwefel.json  best_individual_Schwefel_20gens_10.json  best_individual_Schwefel_9gens_200.json  best_individual_gaussian.json  best_individual_gaussian_20gens_10.json  best_individual_gaussian_9gens_200.json  best_individual_noise.json  best_individual_noise_20gens_10.json  best_individual_noise_9gens_200.json  best_individual_sphere.json  (+2 more)
backend/core/: log.py
backend/engine/: evaluate.py  population_utils.py  run_iga_simulation.py
result/random/: simulation_random_results.json
(+4116 files in other folders)
