[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "array-api-strict>=2.4.1",
    "bokeh>=3.8.1",
    "brotli>=1.2.0",
    "brotlicffi>=1.2.0.0",
    "cairocffi>=1.7.1",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "checks>=0.2",
    "cython>=3.2.2",
    "defcon>=0.12.2",
    "defusedxml>=0.7.1",
    "docutils>=0.22.3",
    "email-validator>=2.3.0",
    "eval-type-backport>=0.3.1",
    "freetype-py>=2.5.1",
    "fs>=2.4.16",
    "glyphslib>=6.12.5",
    "hypothesis>=6.148.7",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "japanize-matplotlib>=1.1.3",
    "jax>=0.8.1",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "lz4>=4.4.5",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "munkres>=1.1.4",
    "ndonnx>=0.17.1",
    "numpy>=2.3.5",
    "olefile>=0.47",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "platformdirs>=4.5.1",
    "pooch>=1.8.2",
    "psutil>=7.1.3",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pyinstaller>=6.17.0",
    "pyqt6>=6.10.1",
    "pyside6>=6.10.1",
    "pytest>=9.0.2",
    "pytest-fail-slow>=0.6.0",
    "pytest-run-parallel>=0.8.0",
    "pytest-timeout>=2.4.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "railroad>=0.5.0",
    "reportlab>=4.4.5",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "scipy-doctest>=2.0.1",
    "selenium>=4.39.0",
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.2",
    "shiboken6>=6.10.1",
    "sip>=6.15.0",
    "sphinx>=9.0.4",
    "sphinx-gallery>=0.20.0",
    "sympy>=1.14.0",
    "threadpoolctl>=3.6.0",
    "toml>=0.10.2",
    "tomli>=2.3.0",
    "tornado>=6.5.2",
    "typing>=3.10.0.0",
    "ufolib2>=0.18.1",
    "uharfbuzz>=0.52.0",
    "unicodedata2>=17.0.0",
    "zopfli>=0.4.0",
]
